deployment-configs/production/legacy/beckn-gateway-083-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beckn-gateway-083-production-$BUILD_VERSION
  namespace: atlas
  labels:
    version: $BUILD_VERSION
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beckn-gateway-083-production
      version: $BUILD_VERSION
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"761ebc5a63976754715f22fcf548f05270fb4b8db0732489A4aebdb31fa81d960","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      labels:
        app: beckn-gateway-083-production
        version: $BUILD_VERSION
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-type
                    operator: In
                    values:
                      - generic-compute
      containers:
        - command:
            - /bin/bash
            - -c
          args:
            - 'mkdir /etc/beckn && cp -HR /tmp/dhall-configs/* /etc/beckn/. && cp -HR /tmp/dhall-secrets/* /etc/beckn/. && echo "starting app server" && /opt/app/beckn-gateway-exe'
          image: 147728078333.dkr.ecr.ap-south-1.amazonaws.com/beckn-uat:$BUILD_VERSION
          name: beckn-gateway-083-production
          ports:
            - containerPort: 8015
              name: app-http
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /v1/
              port: 8015
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 12
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /v1/
              port: 8015
            initialDelaySeconds: 30
            periodSeconds: 12
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          securityContext:
            privileged: false
          volumeMounts:
            - name: dhall-configs
              mountPath: "/tmp/dhall-configs"
              readOnly: true
            - name: dhall-secrets
              mountPath: "/tmp/dhall-secrets"
              readOnly: true
      terminationGracePeriodSeconds: 90
      volumes:
        - emptyDir:
            medium: Memory
          name: istio-envoy
        - name: istio-certs
          secret:
            optional: true
            secretName: istio.default
        - name: dhall-configs
          configMap:
            name: beckn-dhall-config-083-production
            items:
              - key: beckn-gateway.dhall
                path: config/beckn-gateway.dhall
              - key: common.dhall
                path: generic/common.dhall
        - name: dhall-secrets
          secret:
            secretName: beckn-dhall-secret-083-production
            items:
              - key: beckn-gateway.dhall
                path: secrets/beckn-gateway.dhall
              - key: common.dhall
                path: generic/secrets/common.dhall
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: atlas
  name: beckn-gateway-083-production
  labels:
    app: beckn-gateway-083-production
spec:
  ports:
    - port: 8015
      targetPort: 8015
      name: app-http
    - port: 9999
      targetPort: 9999
      name: http-prom
  selector:
    app: beckn-gateway-083-production
