deployment-configs/production/legacy/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: beckn-gateway-083-production-destinations
  namespace: atlas
spec:
  host: beckn-gateway-083-production
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: 820789c5
      labels:
        version: 820789c5
